[gd_scene load_steps=2 format=3 uid="uid://b6mowywh26r6e"]

[ext_resource type="Script" uid="uid://c3t3whpcjwocf" path="res://scripts/game_over_menu.gd" id="1_c0vvf"]

[node name="GameOverMenu" type="CanvasLayer"]
script = ExtResource("1_c0vvf")

[node name="PanelBorder" type="ColorRect" parent="."]
offset_left = 335.0
offset_top = 164.0
offset_right = 835.0
offset_bottom = 464.0
color = Color(0, 0, 0, 1)

[node name="PausePanel" type="ColorRect" parent="."]
offset_left = 326.0
offset_top = 155.0
offset_right = 826.0
offset_bottom = 455.0
color = Color(0.282353, 0.403922, 0.796078, 1)

[node name="FinalScoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -150.5
offset_right = 113.5
offset_bottom = -100.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "本局得分: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -74.0
offset_right = 100.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "重新开始"

[node name="ExitButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.5
offset_top = -298.0
offset_right = 39.5
offset_bottom = -235.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "结束游戏"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
